syntax = "proto3";

package rpc;
option go_package = "api/rpc";

service Mancala {
  rpc CreateGame(NewGame) returns (OngoingGame);
  rpc ExecutePlay(Play) returns (OngoingGame);
  rpc GetGame(GameRequest) returns (OngoingGame);
}

message Play {
  string gameId = 1;
  int64  pitIndex = 2;
}

message GameRequest {
  string id = 1;  
}

message NewGame {
  string player1 = 1;
  string player2 = 2;
}

message OngoingGame {
  string id = 1;
  int64 result = 2;
  int64 turn = 3; 
  BoardState board1 = 4;
  BoardState board2 = 5;
}

message BoardState {
    repeated int64 pits = 1;
    int64 store = 2;
    Player player = 3;  
}

message Player {
    string name = 1;
    int64 score = 2;
}